# bine

./: .gitignore  Cargo.toml  README.md
shaders/: basic.wgsl
src/: lib.rs  main.rs
src/core/: engine.rs  mod.rs
src/input/: gamepad.rs  input.rs  keyboard.rs  mod.rs  mouse.rs
src/renderer/: camera.rs  mod.rs  renderer.rs  texture.rs  vertex.rs
src/window/: errors.rs  mod.rs  window.rs  winit_window.rs
