[package]
name = "bine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = {version = "1.24.0", features = ["derive"]}
cgmath = "0.18.0"
env_logger = "0.11.8"
image = {version = "0.25.9", features = ["png", "jpeg"], default-features = false}
pollster = "0.4.0"
tokio = "1.48.0"
wgpu = "27.0.1"
winit = "0.30.12"
